lab6: fixed issues with an unauthorized user
